2009-07-02  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* Makefile.awk: fixed to take correct count, as "for (k in a)" now
	iterates in an arbitrary sequence.

	* fileerr.h (tino_file_open_createA): and many others added

2009-06-24  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* main_file.h (tino_main_file): Prototype changed to support
	future flags and options.  Also usage now is mostly implicite,
	making it even more easy to write wrappers quickly.  (Note that
	SHIT support is planend, too, for the future.)

2009-05-27  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* num.h (tino_num_secondsA): added

2009-05-26  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* aux.h (tino_aux_timestampOn): added (and many other routines in
	this module)

	* arg.h (tino_snprintf_ret): added

	* dirty.h (tino_strxcpy): added

	* data_tool.h (tino_data_timestampO): added

2009-05-21  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* sysfix_cygwin.h: sighandler_t added for CygWin which does not
	define it.

2009-04-09  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* slist.h (tino_slist_add): now uses tino_glist_add_ptr()
	(tino_glist_add_ptr): added

	* alloc.h (TINO_FREE_NULL): now no more modifies errno

2009-03-31  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* strprintf.h (tino_str_printf_buf, tino_str_vprintf_buf): added

2009-03-24  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* scale.h (tino_scale_slew_avg): added
	(TINO_SCALE_SLEW_HISTORY): define this to the history length if
	needed

	* arg.h (tino_snprintf): now compiles again

2009-03-17  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* auxbuf.h (tino_auxbuf_clearOn): this now does work
	(tino_auxbufOn): added length support and AUXBUF nulling if first
	initialized

	* scale.h (tino_scale_number): no scaling if at 0, so 0 stays 0.
	Anything not zero (very small) becomes 0.0

2009-03-02  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* sockbuf.h (tino_sockbuf_processN): exceptions now are really