@@ -1,3 +1,8 @@
+2009-07-28  Valentin Hilbig  <tino@zoo.03.softkill.net>
+
+	* file.h (tino_file_open_createI, tino_file_openI): added
+	(tino_file_open_createE, tino_file_openE): corrected
+
 2009-07-02  Valentin Hilbig  <tino@zoo.03.softkill.net>
 
 	* Makefile.awk: fixed to take correct count, as "for (k in a)" now
